# pygraspi

./: .gitignore  README.md  default.nix  environment.yml  setup.cfg  setup.py  shell.nix
.circleci/: config.yml
.github/workflows/: main.yml  test-pygraspi-package.yml
notebooks/: feature_engineering.ipynb  graph-descriptors.ipynb  graph-features.ipynb  intro.ipynb  junctions_testcases.ipynb  owodolab_feature_selection.ipynb  rough_intersections.ipynb  sandbox.ipynb  sandbox1.ipynb  sandbox3.ipynb
notebooks/data/: CombinedPSP.csv  data_0.514_2.4_000080.txt  data_0.514_2.4_000100.txt  data_0.514_2.4_000140.txt  data_0.514_2.4_000160.txt  data_0.514_2.4_000180.txt  data_0.514_2.4_000220.txt  data_0.514_2.4_000280.txt  data_0.514_2.4_000440.txt  data_0.514_2.4_000480.txt  data_0.514_2.4_000560.txt  data_0.514_2.4_000620.txt  data_0.514_2.4_000760.txt  data_0.514_2.4_000880.txt  data_0.514_2.4_001240.txt  data_0.514_2.4_001800.txt  data_0.514_2.4_002480.txt  data_0.514_2.4_004660.txt  data_0.514_2.4_006400.txt  data_0.514_2.6_000080.txt  data_0.514_2.6_000100.txt  data_0.514_2.6_000140.txt  data_0.514_2.6_000180.txt  data_0.514_2.6_000220.txt  data_0.514_2.6_000240.txt  data_0.514_2.6_000260.txt  data_0.514_2.6_000340.txt  data_0.514_2.6_000420.txt  data_0.514_2.6_000460.txt  data_0.514_2.6_000540.txt  data_0.514_2.6_000600.txt  data_0.514_2.6_000680.txt  data_0.514_2.6_000980.txt  data_0.514_2.6_002660.txt  data_0.514_2.6_004160.txt  (+538 more)
pygraspi/: combined_descriptors.py  graph_descriptors.py  graph_graphtool.py  makeGridGraph.py  skeletal_descriptors.py
(+6 files in other folders)
