[metadata]
name = pygraspi
description-file = README.md
description = Python implemenation of Graspi
author = Daniel Wheeler
author_email = daniel.wheeler@nist.gov
url = https://github.com/wd15/pygraspi
license_files = LICENSE

[options]
install_requires =
    numpy


[tool:pytest]
testpaths = pygraspi notebooks/intro.ipynb
addopts = --doctest-modules --ignore=setup.py --nbval

[flake8]
ignore = E731, W503
max-line-length = 88
